# bank-email-triage-env

./: .env.example  Dockerfile  README.md  __init__.py  client.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  scratch_test.py
app/: bank_kb.py  emails.py  env.py  main.py  models.py  tasks.py
server/: app.py
