[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bank-email-triage-env"
version = "1.0.0"
description = "Bank Email Triage Environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.8.2",
    "httpx>=0.27.2",
    "openai>=1.51.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "openenv-core>=0.2.3"
]

[project.scripts]
server = "server.app:main"
